# ai-hackathon-cli-chatr

./: .gitignore  Cargo.toml
src/: args.rs  history.rs  main.rs
